syntax = "proto3";

package version;

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0"
  }
  external_docs: {
    url: "https://github.com/Percona-Lab/percona-version-service"
    description: "This service provides version information and image paths for supporting the use of Percona Kubernetes Operators in a variety of scenarios while enabling specific version deployments and automated upgrades."
  }
  schemes: [
    HTTP,
    HTTPS
  ]
};
// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/Percona-Lab/percona-version-service/version";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

// VersionService provides public API methods for version service usage.
service VersionService {
  // Apply provides information about specific product version and its dependencies.
  rpc Apply(ApplyRequest) returns (VersionResponse) {
    option (google.api.http) = {
      get: "/versions/v1/{product}/{operator_version}/{apply}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Specific version"
      description: "Return specific product version"
    };
  }
  // Operator provides information about product versions and its dependencies for operator.
  rpc Operator(OperatorRequest) returns (OperatorResponse) {
    option (google.api.http) = {
      get: "/versions/v1/{product}/{operator_version}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Product versions for specific operator version"
      description: "Return product versions for specific operator"
    };
  }
  // Product provides information about product versions among all operator versions.
  rpc Product(ProductRequest) returns (ProductResponse) {
    option (google.api.http) = {
      get: "/versions/v1/{product}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Product versions for all operator version"
      description: "Return product versions for all operator"
    };
  }
  // Metadata provides metadata information about products.
  rpc Metadata(MetadataRequest) returns (MetadataResponse) {
    option (google.api.http) = {
      get: "/metadata/v1/{product}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Metadata for a product"
      description: "Return metadata information for a product"
    };
  }

  // Metadata v2 provides metadata information about products. It is an extension of Metadata with new fields.
  rpc MetadataV2(MetadataRequest) returns (MetadataV2Response) {
    option (google.api.http) = {
      get: "/metadata/v2/{product}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "v2 metadata for a product"
      description: "Return metadata information with additional image information for a product"
    };
  }

  rpc GetReleaseNotes(GetReleaseNotesRequest) returns (GetReleaseNotesResponse) {
    option (google.api.http) = {
      get: "/release-notes/v1/{product}/{version}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Gets the release notes for a product version"
      description: "Return release notes for a product version"
    };
  }
}

message ApplyRequest {
  string product = 1;
  string operator_version = 2;
  string apply = 3;
  string database_version = 4;
  string kube_version = 5;
  string platform = 6;
  string pmm_version = 7;
  string backup_version = 8;
  string proxysql_version = 9;
  string haproxy_version = 10;
  string namespace_uid = 11;
  string custom_resource_uid = 12;
  string log_collector_version = 13;
  bool sharding_enabled = 14;
  bool hashicorp_vault_enabled = 15;
  bool cluster_wide_enabled = 16;
  bool pmm_enabled = 17;
  bool helm_deploy_operator = 18;
  bool helm_deploy_cr = 19;
  bool sidecars_used = 20;
  bool backups_enabled = 21;
  int32 cluster_size = 22;
  bool pitr_enabled = 23;
  bool physical_backup_scheduled = 24;
  string extensions = 25;
  bool user_management_enabled = 26;
  bool role_management_enabled = 27;
  bool mcs_enabled = 28;
  bool volume_expansion_enabled = 29;
}

message OperatorRequest {
  string product = 1;
  string operator_version = 2;
  string database_version = 4;
  string kube_version = 5;
  string platform = 6;
  string pmm_version = 7;
  string backup_version = 8;
  string proxysql_version = 9;
  string haproxy_version = 10;
  string namespace_uid = 11;
  string custom_resource_uid = 12;
  string log_collector_version = 13;
  bool sharding_enabled = 14;
  bool hashicorp_vault_enabled = 15;
  bool cluster_wide_enabled = 16;
  bool pmm_enabled = 17;
  bool helm_deploy_operator = 18;
  bool helm_deploy_cr = 19;
  bool sidecars_used = 20;
  bool backups_enabled = 21;
  int32 cluster_size = 22;
  bool pitr_enabled = 23;
  bool physical_backup_scheduled = 24;
  string extensions = 25;
  bool user_management_enabled = 26;
  bool role_management_enabled = 27;
  bool mcs_enabled = 28;
  bool volume_expansion_enabled = 29;
}

message ProductRequest {
  string product = 1;
  string database_version = 4;
  string kube_version = 5;
  string platform = 6;
  string pmm_version = 7;
  string backup_version = 8;
  string proxysql_version = 9;
  string haproxy_version = 10;
  string namespace_uid = 11;
  string custom_resource_uid = 12;
  string log_collector_version = 13;
  bool sharding_enabled = 14;
  bool hashicorp_vault_enabled = 15;
  bool cluster_wide_enabled = 16;
  bool pmm_enabled = 17;
  bool helm_deploy_operator = 18;
  bool helm_deploy_cr = 19;
  bool sidecars_used = 20;
  bool backups_enabled = 21;
  int32 cluster_size = 22;
  bool pitr_enabled = 23;
  bool physical_backup_scheduled = 24;
  string extensions = 25;
  bool user_management_enabled = 26;
  bool role_management_enabled = 27;
  bool mcs_enabled = 28;
  bool volume_expansion_enabled = 29;
}

message MetadataRequest {
  string product = 1;
}

// Status describes the current version status.
enum Status {
  status_invalid = 0;
  recommended = 1;
  available = 2;
  required = 3;
  disabled = 4;
}

// Version represents product version information.
message Version {
  string image_path = 1;
  string image_hash = 2;
  string image_hash_arm64 = 3;

  Status status = 4;
  bool critical = 5;
}

// Version represents product version information.
message VersionV2 {
  string image_path = 1;
  string image_hash = 2;
  string image_hash_arm64 = 3;

  // release_timestamp is the release time of this image.
  google.protobuf.Timestamp image_release_timestamp = 6;

  Status status = 4;
  bool critical = 5;
}

// VersionMatrix represents set of possible product versions.
message VersionMatrix {
  map<string, Version> mongod = 1;
  map<string, Version> pxc = 2;
  map<string, Version> pmm = 3;
  map<string, Version> proxysql = 4;
  map<string, Version> haproxy = 5;
  map<string, Version> backup = 6;
  map<string, Version> operator = 7;
  map<string, Version> log_collector = 8;
  map<string, Version> postgresql = 9;
  map<string, Version> pgbackrest = 10;
  map<string, Version> pgbackrest_repo = 11;
  map<string, Version> pgbadger = 12;
  map<string, Version> pgbouncer = 13;
  map<string, Version> pxc_operator = 14;
  map<string, Version> psmdb_operator = 15;
  map<string, Version> pg_operator_apiserver = 16;
  map<string, Version> pg_operator_event = 17;
  map<string, Version> pg_operator_rmdata = 18;
  map<string, Version> pg_operator_scheduler = 19;
  map<string, Version> pg_operator = 20;
  map<string, Version> pg_operator_deployer = 21;
  map<string, Version> ps_operator = 22;
  map<string, Version> mysql = 23;
  map<string, Version> router = 24;
  map<string, Version> orchestrator = 25;
  map<string, Version> toolkit = 26;
  map<string, Version> postgis = 27;
}

// OperatorVersion represents operator version.
message OperatorVersion {
  string product = 1;
  string operator = 2;
  VersionMatrix matrix = 3;
}

message VersionResponse {
  repeated OperatorVersion versions = 1;
}

message OperatorResponse {
  repeated OperatorVersion versions = 1;
}

message ProductResponse {
  repeated OperatorVersion versions = 1;
}

// MetadataVersion represents metadata for a given version.
message MetadataVersion {
  string version = 1;
  // Recommended is the recommended version for a given component.
  map<string, string> recommended = 2;
  // Supported holds semver constraint per component, such as ">= 1.0, < 1.4".
  map<string, string> supported = 3;
}

// MetadataV2Version represents metadata for a given version with additional fields.
message MetadataV2Version {
  string version = 1;
  // Recommended is the recommended version for a given component.
  map<string, string> recommended = 2;
  // Supported holds semver constraint per component, such as ">= 1.0, < 1.4".
  map<string, string> supported = 3;
  // ImageInfo holds information about the docker image for this version.
  VersionV2 image_info = 4;
}

message MetadataResponse {
  repeated MetadataVersion versions = 1;
}

message MetadataV2Response {
  repeated MetadataV2Version versions = 1;
}

message GetReleaseNotesRequest {
  // Product name.
  string product = 1;
  // Product version.
  string version = 2;
}

message GetReleaseNotesResponse {
  // The product name.
  string product = 1;
  string version = 2;
  // release_notes is the release note for this version.
  string release_note = 3;
}
